--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,8 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Code coverage profiles and other test artifacts
+# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-coverage.*
-*.coverprofile
-profile.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -24,9 +21,12 @@ profile.cov
 go.work
 go.work.sum
 
-# env file
-.env
+.idea/
+bin
+**/generated
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# env file
+*.env
+.envrc
+
+*.log
