feat: add player-position & team & team translation handling

--- a/nginx.conf
+++ b/nginx.conf
@@ -64,5 +64,9 @@ http {
         location /api/v1/player-positions {
             proxy_pass http://sm-service/api/v1/player-positions;
         }
+
+        location /api/v1/teams {
+            proxy_pass http://sm-service/api/v1/teams;
+        }
     }
 }
