--- a/nginx.conf
+++ b/nginx.conf
@@ -68,5 +68,9 @@ http {
         location /api/v1/teams {
             proxy_pass http://sm-service/api/v1/teams;
         }
+
+        location /api/v1/players {
+            proxy_pass http://sm-service/api/v1/players;
+        }
     }
 }
