feat: add transfer handling

--- a/nginx.conf
+++ b/nginx.conf
@@ -72,5 +72,9 @@ http {
         location /api/v1/players {
             proxy_pass http://sm-service/api/v1/players;
         }
+
+        location /api/v1/transfers {
+            proxy_pass http://sm-service/api/v1/transfers;
+        }
     }
 }
