--- a/sql/soccer-manager/sqlc.yml
+++ b/sql/soccer-manager/sqlc.yml
@@ -10,4 +10,5 @@ sql:
         emit_json_tags: true
         emit_enum_valid_method: true
         emit_all_enum_values: true
+        emit_empty_slices: true
         sql_package: "pgx/v5"
