--- a/nginx.conf
+++ b/nginx.conf
@@ -76,5 +76,9 @@ http {
         location /api/v1/transfers {
             proxy_pass http://sm-service/api/v1/transfers;
         }
+
+        location /api/v1/transfer-records {
+            proxy_pass http://sm-service/api/v1/transfer-records;
+        }
     }
 }
